terraform/modules/vpc/main.tf
#VPC
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true
    enable_dns_support = true

    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-vpc"}
    )
}

#Internet Gateway
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-igw"}
    )
}

#Public Subnets
resource "aws_subnet" "public" {
    count = length(var.availability_zones)
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnets_cidr[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true

    tags = merge(var.tags, {
      Name                                            = "${var.project_name}-${var.environment}-public-${var.availability_zones[count.index]}"
      "kubernetes.io/role/elb"                        = "1"
      "kubernetes.io/cluster/${var.project_name}-${var.environment}-eks" = "shared"
    })
}

#Private Subnets
resource "aws_subnet" "private" {
    count = length(var.availability_zones)
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnets_cidr[count.index]
    availability_zone = var.availability_zones[count.index]
    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-private-${var.availability_zones[count.index]}"
        "kubernetes.io/role/internal-elb" = "1"
        "kubernetes.io/cluster/${var.project_name}-${var.environment}-eks" = "shared"
    })
}

resource "aws_eip" "nat-eip" {
    count= var.enable_nat_gateway ? length(var.availability_zones) : 0
    domain = "vpc"

    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-nat-eip-${count.index + 1}"
    })
}

resource "aws_nat_gateway" "nat" {
    count = var.enable_nat_gateway ? length(var.availability_zones) : 0
    allocation_id = aws_eip.nat-eip[count.index].id
    subnet_id = aws_subnet.public[count.index].id

    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-nat-${count.index + 1}"
    })
    depends_on = [aws_internet_gateway.main]
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }
    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-public-rt"
    })
}

resource "aws_route_table_association" "public" {
    count = length(var.availability_zones)
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
    count = length(var.availability_zones)
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = var.enable_nat_gateway ? aws_nat_gateway.nat[count.index].id : null
    }
    tags = merge(var.tags, {
        Name = "${var.project_name}-${var.environment}-private-rt-${count.index + 1}"
    })
}

resource "aws_route_table_association" "private" {
    count = length(aws_subnet.private)
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private[count.index].id
}

resource "aws_vpc_endpoint" "s3" {
    vpc_id = aws_vpc.main.id
    service_name = "com.amazonaws.${var.region}.s3"
}
